@@ -6,7 +6,7 @@ This file provides guidance to Claude Code (claude.ai/code) when working with co
 
 **Godot-JVM** is a GDExtension-based JVM binding that enables Kotlin, Java, and Scala as scripting languages. It is a hybrid C++/JVM project: the C++ side integrates with Godot through GDExtension, and the Kotlin/Gradle side provides the runtime libraries and tooling for user projects.
 
-Current binding version: `1.0.0` targeting Godot `4.7.2`.
+The binding version is defined in `kt/gradle/libs.versions.toml` (`godotJvm`) and mirrored in `cpp/version.h` (`GODOT_JVM_VERSION`); the two must match. The targeted Godot version is `godot` in the same toml, and `GODOT_VERSION` in `.github/workflows/trigger_ci.yml` for CI.
 
 ## godot-cpp fork
 
@@ -34,6 +34,12 @@ of upstream bug fixes.
 - **KISS** — Prefer the simplest design that clearly solves the current problem.
 - **YAGNI** — Do not add behavior or abstractions for requirements that do not exist yet.
 - **DRY** — Keep each piece of knowledge and behavior in one authoritative place.
+- **Lambdas** — Not banned, but use one only when strictly necessary (a callback API) or when the code would be markedly more complex without it. Prefer a plain loop, a file-local function, or a data table over a local lambda that merely groups a few lines.
+- **No anonymous namespaces** — File-local C++ helpers are `static` free functions in the `.cpp` (or private members when they belong to the class); nothing lives in `namespace { }`. `.clang-tidy` is an allowlist, so no check pushes toward anonymous namespaces.
+- **`godot` namespace in `cpp/api/` and `cpp/editor/`** — Headers wrap their declarations in a `namespace godot { }` block and `.cpp` files start with `using namespace godot;`, so no `godot::` prefixes appear in those directories (`raw_godot::` is a different namespace and stays). Macro-only headers such as `api/language/names.h` have nothing to wrap.
+- **Includes** — Every file includes what it uses directly and nothing it does not; do not rely on a header reaching you through another include. When a header only includes something for its `.cpp`, move the include to the `.cpp`. Build `editor`, `template_debug` and `template_release` after touching includes: the three targets compile different `#ifdef` branches.
+- **clang-format** — Run `clang-format -i` (version 20 or newer, the repo `.clang-format` uses recent options) over every `.cpp`, `.h` and `.mm` under `cpp/` except the generated `cpp/editor/project/templates.h`, which carries `// clang-format off`.
+- **C++ initialization** — Use `=` for scalar values and expressions already of the declared type (`int count = 0;`, `String name = get_name();`). Use direct `()` initialization whenever an object is constructed, whether its constructor is explicit or implicit: `Type value(expr);`, never `Type value = Type(expr);`. This includes JNI wrappers built from raw handles or call results: `jni::Env env(p_raw_env);`, `jni::JLongArray array(p_raw_array);`, `jni::JObject result(wrapped.call_object_method(...));`. Use `()` for constructor calls with several arguments (`Vector3 pos(1, 2, 3);`), `{}` only for arrays, aggregates, `std::initializer_list` parameters, and returned/passed temporary aggregates (`return {ptr, size};`). Member initializer lists use `()`, default member initializers use `=`. Never `Type value{expr};`, never `Type value();`, never `Foo f{};` on a class type (write `Foo f;`); zero PODs with `= {}`.
 
 ## Prerequisites
 
@@ -48,14 +54,16 @@ The project has two independent build systems that must both be built.
 
 ### Native GDExtension (SCons)
 
-Run SCons commands from this repository's root. They build the native GDExtension library.
+Run SCons commands from this repository's root. They build the native GDExtension library. Valid platforms are `linux`, `windows`, `macos`, `android`, and `ios` (godot-cpp naming, not the engine's `linuxbsd`).
 
 ```bash
-scons platform=linuxbsd target=editor             # Linux editor
-scons platform=windows target=editor              # Windows editor
-scons platform=linuxbsd target=template_release   # export template
-scons p=linuxbsd -j$(nproc) debug_symbols=yes dev_build=yes  # debug build (multi-core)
+scons platform=linux target=editor               # Linux editor
+scons platform=windows target=editor             # Windows editor
+scons platform=linux target=template_release     # export template
+scons platform=linux -j$(nproc) debug_symbols=yes dev_build=yes  # debug build (multi-core)
 ```
+
+The built library lands directly in `harness/tests/addons/jvm/libs/` (Android builds go to `build/android/`), where the harness project's `.gdextension` manifest picks it up. Nothing needs to be copied after a build. `SConstruct` also regenerates `cpp/editor/project/templates.h` from the IntelliJ templates on every build.
 
 ### Kotlin/Gradle
 
@@ -63,26 +71,20 @@ scons p=linuxbsd -j$(nproc) debug_symbols=yes dev_build=yes  # debug build (mult
 cd kt/
 ./gradlew build                  # build all subprojects
 ./gradlew build -Prelease        # production/release build
-./gradlew publishToMavenLocal    # publish artifacts locally for branch testing
-./gradlew publishArtifactsToMavenLocal  # publish all local-consumption artifacts to mavenLocal
+./gradlew publishArtifactsToMavenLocal  # publish everything a user project needs to mavenLocal
 ```
 
-Full local publish (for testing unreleased branch changes in a user project):
-```bash
-cd kt/
-./gradlew publishArtifactsToMavenLocal
-# Version will appear in ~/.m2/repository/com/utopia-rise/godot-gradle-plugin/
-```
+`publishArtifactsToMavenLocal` (`kt/build.gradle.kts`) is an aggregator that runs five nested Gradle invocations: `common`, `tools-common`, and `api-generator` (included builds, unreachable from the root `publishToMavenLocal`), then the main build twice, once without and once with `-Prelease=true`, because every `godot-library` module names its artifact `-debug` or `-release` from that property. Together they publish every `com.utopia-rise` coordinate the gradle plugin resolves: the plugin and its marker, `common`, `tools-common`, `api-generator`, the `godot-registration` fat jar, and the six `godot-*-library-{debug,release}` jars. A bare `./gradlew publishToMavenLocal` is not enough. The Android plugin AARs are not Maven artifacts and are copied by hand (see `test-a-branch.md`).
+
+The snapshot version appears in `~/.m2/repository/com/utopia-rise/godot-gradle-plugin/`. The consuming project needs `mavenLocal()` in both `pluginManagement.repositories` (`settings.gradle.kts`) and the project `repositories` block (`build.gradle.kts`); the plugin resolves the libraries from the latter and adds no repository itself.
 
 ### Template Generation (Python)
 
-Run after modifying any `.template` or `.godot_template` files under `kt/plugins/godot-intellij-plugin/src/main/resources/template/`:
+`generate_templates.py` converts the `.template` and `.godot_template` files under `kt/plugins/godot-intellij-plugin/src/main/resources/template/` into base64-encoded C++ headers at `cpp/editor/project/templates.h`, split into 8KB chunks to avoid C++ header size limits. `SConstruct` runs it automatically, so editing a template only requires rebuilding the native GDExtension. Run it by hand only to inspect the output:
 
 ```bash
 python generate_templates.py
 ```
-
-This converts templates into base64-encoded C++ headers at `cpp/editor/project/templates.h` (split into 8KB chunks to avoid C++ header size limits), then rebuild the native GDExtension.
 
 ## Testing
 
@@ -90,19 +92,21 @@ This converts templates into base64-encoded C++ headers at `cpp/editor/project/t
 # Kotlin unit tests
 cd kt/ && ./gradlew test
 
-# Integration tests (GUT-based, requires a built editor binary)
+# Integration tests (gdUnit4-based)
 cd harness/tests/
-jlink --add-modules java.base,java.logging --output jvm/jre-amd64-linux  # create JRE first
-./gradlew runGutTests
+./gradlew generateEmbeddedJre   # jlink an embedded JRE into the project, once
+./gradlew importResources       # build the harness with the gradle plugin and import resources
+./gradlew runGDTests            # also: runGraalGDTests, runExportedGDTests
 ```
 
-The `harness/tests/` directory is a full Godot project. It requires a built editor binary and `godot-bootstrap.jar` copied to the Godot root `bin/` folder before running.
+The `harness/tests/` directory is a full Godot-JVM project driven by the official Godot editor, not a custom binary. Place the editor in `harness/tests/bin` or point `GODOT_EDITOR` at its executable. The Gradle build produces `godot-bootstrap.jar` and `main.jar` inside the project itself, and the SCons build drops the native library into `harness/tests/addons/jvm/libs/`, so nothing needs to be copied anywhere before running.
 
 ### Testing Changes from a Feature Branch
 
 1. Publish locally (see above)
-2. Configure the user project's Gradle repositories to use `mavenLocal()` and use the exact snapshot version you published (e.g. `1.0.0-d68f299-SNAPSHOT`)
-3. Run with the dev build: `./bin/godot.linuxbsd.editor.dev.x86_64.jvm` (or platform equivalent)
+2. Add `mavenLocal()` to both repository blocks of the user project and use the exact snapshot version you published (`<godotJvm version>-<short commit hash>-SNAPSHOT`)
+3. Build the GDExtension straight into the project: `scons platform=<p> target=editor target_path=/abs/path/to/project/addons/jvm/libs/`
+4. Open the project with the official Godot editor
 
 Full workflow: `docs/src/doc/contribute/test-a-branch.md`
 
@@ -110,7 +114,7 @@ Full workflow: `docs/src/doc/contribute/test-a-branch.md`
 
 ```bash
 # Start Godot with debug port
-godot --jvm-debug-port=5005
+godot --jvm-use-debug --jvm-debug-port=5005
 # Then attach a remote debugger in IntelliJ IDEA to localhost:5005
 ```
 
@@ -127,11 +131,11 @@ cd kt/
 
 ### C++ Layer (`cpp/`)
 
-- **`cpp/gd_kotlin.h/cpp`** — `GDKotlin` singleton; owns the runtime state machine (`uninitialized → project_discovered → jvm_started → project_loaded → ...`). Many operations gate on correct state — check here first when debugging startup issues.
-- **`register_types.cpp`** — GDExtension entry point; registers `JvmScript` types, script languages, resource loaders/savers with Godot.
+- **`cpp/godot_jvm.h` / `cpp/godot-jvm.cpp`** — `GodotJvm` singleton; owns the runtime state machine (`NOT_STARTED → JVM_LIBRARY_LOADED → JVM_STARTED → BOOTSTRAP_LOADED → CORE_LIBRARY_INITIALIZED → ENGINE_TYPES_INITIALIZED → JVM_SCRIPTS_INITIALIZED`), driven by `initialize_up_to()` / `finalize_down_to()`. Many operations gate on correct state — check here first when debugging startup issues.
+- **`cpp/register_types.cpp`** — GDExtension entry point; registers `JvmScript` types, script languages, resource loaders/savers with Godot.
 - **`cpp/jvm/lifecycle/`** — JVM startup (`jvm_manager`), class loader management, project settings parsing.
 - **`cpp/jvm/wrapper/`** — JNI bridges, type conversion, per-thread shared buffer communication.
-- **`cpp/api/script/`** — Script types: `JvmScript` (abstract base), `KotlinScript`, `JavaScriptLanguage`, `GdjScript`, `ScalaScript`.
+- **`cpp/api/script/`** — `JvmScript` (abstract base), `JvmInstance`, placeholder instance, script manager, source parser. Concrete script types live in **`cpp/api/script/language/`**: `KotlinScript`, `JavaScript`, `GdjScript`, `ScalaScript`.
 - **`cpp/api/language/`** — `ScriptLanguage` implementations (`KotlinLanguage`, `JavaLanguage`, etc.) registered as Godot editor language options.
 - **`cpp/core/`** — Binding manager; maps Godot objects to JVM instances, synchronizes lifecycle.
 - **`cpp/editor/`** — Editor plugin, Gradle task dialog, project generation from templates.
@@ -141,6 +145,9 @@ cd kt/
 
 - **`godot-library/godot-api-library/`** — Auto-generated Godot API bindings. **Never edit manually.** Regenerate with `kt/api-generator` after `api.json` changes.
 - **`godot-library/godot-core-library/`** — Core types, signal infrastructure, base classes for user code.
+- **`godot-library/godot-internal-library/`** — Internal utilities shared by the Godot-JVM libraries.
+- **`godot-library/godot-extension-library/`** — Convenience extensions built on top of the base Godot API (e.g. `connectLambda`).
+- **`godot-library/godot-coroutine-library/`** — Kotlin coroutine support in a Godot context (`GodotDispatchers`, awaiting signals).
 - **`godot-library/godot-bootstrap-library/`** — JVM bootstrapper; initializes and hot-reloads user classes in the editor.
 - **`godot-registration/`** — Umbrella module (the directory is itself the Gradle module, like `godot-library`); shadow-merges the three sub-modules below into the single publishable `godot-registration` fat jar consumed by the gradle plugin and as a standalone tool.
 - **`godot-registration/godot-class-graph-symbol-processor/`** — Front-end: bytecode processor using ClassGraph (replaced KSP/Mpapt; language-agnostic, supports Kotlin/Java/Scala equally). Reads compiled bytecode and produces model instances. No validation.
@@ -167,16 +174,18 @@ User writes @Script Kotlin, Java, or Scala code
   → JvmResourceFormatLoader loads JARs in editor
   → C++ jvm_manager starts embedded JVM
   → Bootstrap initializes user classes via JNI reflection
-  → GDKotlin binding manager maps JVM objects ↔ Godot nodes
+  → JvmBindingManager (cpp/core/) maps JVM objects ↔ Godot nodes
 ```
 
 ### JAR Artifacts
 
 | JAR | Contents | Purpose |
 |-----|----------|---------|
-| `godot-bootstrap.jar` | godot-library + startup code | Editor use; reloads user code after rebuilds |
-| `main.jar` | user code + dependencies (shadow) | Bundled in exports, executed at runtime |
-| `usercode` (native image) | GraalVM AOT compilation | Replaces both JARs; no runtime reloading |
+| `godot-bootstrap.jar` | godot-library + startup/reload code + the project's ordinary `implementation` dependencies | Loaded in the editor and included in exports; loads and reloads `main.jar` |
+| `main.jar` | user code + generated registrar + `godotMain` dependencies (shadow) | Reloaded after each build in the editor; bundled in exports |
+| `usercode` (native image) | GraalVM AOT compilation of both JARs | Replaces both JARs; no runtime reloading |
+
+`godotSingle` dependencies stay as intact JARs under `res://jvm/external/` and are added to `main.jar`'s class path. Details: `docs/src/doc/contribute/how-it-works/artifacts.md`
 
 ### Memory Management
 
@@ -194,28 +203,41 @@ Full details: `docs/src/doc/contribute/how-it-works/memory-management.md`
 
 ### JNI Shared Buffer (Performance)
 
-To reduce JNI overhead for frequent calls, a **per-thread 8KB buffer** is used for C++/JVM parameter exchange:
-- First 4 bytes: variable count
+To reduce JNI overhead for frequent calls, a **per-thread buffer** is used for C++/JVM parameter exchange. Its size is derived from the maximum inline string size and the 16-argument limit (`MAX_FUNCTION_ARG_COUNT` in `cpp/constraints.h`):
+- First 4 bytes: variable count (object method calls prefix this with the caller pointer and `ObjectID`)
 - Each variable: 4-byte type ordinal + type-specific bytes
-- Type ordinals 0–27 cover all Godot variant types (primitives at fixed size, strings up to 512 bytes inline, larger strings via JNI queue)
+- Type ordinals 0–38 cover all Godot variant types (primitives at fixed size, strings up to 512 bytes inline, larger strings via JNI queue, `Array` at 28, packed arrays at 29–38)
 
 Details: `docs/src/doc/contribute/how-it-works/shared-buffer.md`
 
+### Runtime configuration
+
+Game settings live in `res://godot_jvm_configuration.json` (schema `version` `"3.0"`) and have `--jvm-*` command-line equivalents; precedence is defaults → JSON → command line (`cpp/jvm/lifecycle/jvm_user_configuration.*`, `GodotJvm::fetch_user_configuration`). The editor validates and repairs the file, but applies only command-line settings to its own defaults. `--jvm-use-native-image` works in the editor but disables script reloading. Command-line values are never written back. Reference: `docs/src/doc/reference/runtime-configuration.md`.
+
+Behaviour that is easy to miss in the code:
+- `use_debug`, `debug_port`, `debug_address`, `wait_for_debugger` apply only to desktop JVM games in `DEBUG_ENABLED` builds (`GodotJvm::set_jvm_options`); `jmx_port` also applies in release builds. These dedicated options are ignored by native images and mobile runtimes.
+- `custom_jvm_args` applies to desktop JVM runs and supported native-image runtime options on desktop and iOS. The editor accepts custom arguments through the command line only; Android ignores them.
+- On Android the extension attaches to the existing ART VM, so no `JvmOptions` (debug, JMX, custom args) or `--jvm-path` apply.
+- `max_string_size` is capped at 65535 because `LongStringQueue::max_string_size` is a `uint16_t`.
+- The export plugin reads the JSON at export time, applies enabled preset override categories (debug, memory) and a nonempty custom-argument override, then packs only platform-relevant keys. Desktop JVM/Graal presets force `useNativeImage` false/true. Editor command-line overrides never reach the exported JSON.
+- Field definitions, JSON/command-line parsing, and validation belong to `JvmUserConfiguration`. Everything export related (preset options and their names, override categories, option visibility and warnings, platform filtering of the packed JSON) lives in `GodotJvmEditorExportPlugin`.
+
 ### JVM Modes
 
-Configured in Godot project settings:
+Desktop games select JVM or native image with `useNativeImage` (default false), or `--jvm-use-native-image`.
+Android always uses ART; iOS always uses native image. The internal `JvmType` is resolved at startup, not serialized.
 - **Embedded JVM** — `jlink`-created JRE bundled with the project (recommended for distribution)
 - **Dynamic JVM** — discovered at runtime from `JAVA_HOME` first, then from a `java` executable on
-  `PATH`, and on macOS from `/usr/libexec/java_home` last (see `get_path_to_environment_jvm()` /
-  `get_path_to_java_executable()` in `cpp/godot-jvm.cpp`). `--jvm-path` overrides all of it, including
-  the embedded JRE.
+  `PATH`, and on macOS from `/usr/libexec/java_home -v 17+` last (see `get_path_to_environment_jvm()` /
+  `get_path_to_java_executable()` in `cpp/godot-jvm.cpp`). This discovery is compiled only in editor
+  builds (`TOOLS_ENABLED`); exported games use the embedded JRE. `--jvm-path` overrides all of it,
+  including the embedded JRE.
 
 ## Key Gotchas
 
-- **Kotlin version** — The compiler plugin requires a specific Kotlin version. Mismatches cause build failures. Override via gradle plugin config; see `docs/src/doc/reference/gradle-plugin/languages-and-toolchains.md`.
+- **Kotlin version** — The gradle plugin requires a minimum Kotlin version, not an exact one, and applies its default when the project declares none. A higher version is accepted; overriding `toolchain.kotlinVersion` requires applying the Kotlin JVM plugin explicitly with the same version. See `docs/src/doc/reference/gradle-plugin/languages-and-toolchains.md`.
 - **Godot API auto-generation** — `kt/godot-library/godot-api-library/` is fully generated. Any manual edits will be overwritten.
-- **Template generation** — Editing `.template` files without running `generate_templates.py` and rebuilding C++ will have no effect.
-- **Adding a new script language** — Requires: `JvmScript` C++ subclass + `ScriptLanguage` subclass + registration in `register_types.cpp` + entry in `JvmResourceFormatLoader`/`Saver`.
+- **Template generation** — Editing `.template` files has no effect until the native GDExtension is rebuilt; SCons regenerates `templates.h` as part of the build.
 
 ### GDScript global scope sync commit
 
@@ -225,7 +247,7 @@ When checking whether the `GD` singleton needs to be synchronized with GDScript 
 
 ## CI/CD
 
-Workflows in `.github/workflows/`. The canonical Godot version and JDK version (17) are defined in `trigger_on_push_master.yml`. Build matrix: Android, iOS, Linux, macOS, Windows × editor/template_release targets.
+Workflows in `.github/workflows/`. The canonical Godot version (`GODOT_VERSION`) and JDK version (`JVM_VERSION`) are defined at the top of `trigger_ci.yml` (and mirrored in `trigger_on_tag.yml`). Build matrix: Android, iOS, Linux, macOS, Windows × editor/template_release targets.
 
 ## Documentation
 
@@ -237,4 +259,3 @@ Workflows in `.github/workflows/`. The canonical Godot version and JDK version (
 - Testing branch changes: `docs/src/doc/contribute/test-a-branch.md`
 
 Serve docs locally: `cd docs/ && ./run.sh`
-
